Slight change to text.

--- a/server/static/index.html
+++ b/server/static/index.html
@@ -32,7 +32,7 @@
           
                         <!-- Helpful note for user -->
                         <div class="govuk-body">
-                            <p>This tool finds all the shortest paths between entities in one or more datasets.
+                            <p>This tool finds all shortest paths between entities in one or more datasets.
                                It returns an Excel file that is ready to be imported into i2 Analyst Notebook.</p>
                             <p>The entity IDs can be separated by newlines, spaces, commas, semicolons or tabs.</p>
                         </div>
