--- a/server/static/index.html
+++ b/server/static/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Shortest Path Tool</title>
-        <link rel="stylesheet" href="govuk-frontend-4.3.1.min.css">
+        <link rel="stylesheet" href="/govuk-frontend-4.3.1.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
         <meta name="theme-color" content="#0b0c0c">
     </head>
@@ -39,7 +39,7 @@
 
                         <!-- File upload form -->
                         <div class="govuk-form-group">
-                            <form action="/upload" method="post">
+                            <form action="upload" method="post">
 
                                 <label for="numberHops" class="govuk-label">Maximum number of hops from one entity to another:</label>
                                 <select name="numberHops" class="govuk-select" id="numberHops">
